fix chapter endgame cards intersecting on mobile

--- a/assets/css/features/endgames.css
+++ b/assets/css/features/endgames.css
@@ -2,13 +2,15 @@
     color: var(--font-color);
     padding: 20px 40px;
     background: var(--bg-highlight-color);
+    display: inline-block;
+    margin-top: 10px;
 }
 .endgame_chapter_link {
     text-decoration: none;
 }
 
 .endgame_fix {
-    margin-top: 25px;
+    margin-top: 10px;
 }
 
 .endgame_solved {
